<resources>
    <string name="app_name">DialogosApp</string>
    <string name="Dialogo_boton">Mostrar diálogo básico</string>
    <string name="Dialogo_botonPersonalizado">Mostrar diálogo personalizado</string>
    <string name="Dialogo_titulo">Diálogo Básico</string>
    <string name="Muestra_mensaje">¿Quieres aceptar o cancelar el diálogo?</string>
    <string name="Aceptar">Aceptar</string>
    <string name="Cancelar">Cancelar</string>
    <string name="T_aceptar">Has acceptado</string>
    <string name="T_cancelar">Has cancelado</string>

    <string name="Dialogo_titulo_personalizado">Registro</string>
    <string name="Nombre_text">Nombre:</string>
    <string name="hint_nombre">Nombre</string>
    <string name="Usuario_text">Usuario:</string>
    <string name="hint_usuario">Usuario</string>
    <string name="Telefono_text">Teléfono:</string>
    <string name="hint_tel">Teléfono</string>
    <string name="email_text">Email:</string>
    <string name="hint_email">Correo electrónico</string>
    <string name="Contrasena_text">Contraseña:</string>
    <string name="hint_contrasena">Contraseña</string>
    <string name="toast_registro_aceptado">Registro aceptado</string>
    <string name="toast_registro_cancelado">Registro cancelado</string>

</resources>